Fix broken link in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,8 +90,8 @@
                     <div class="card-body">
                         <h3 class="card-title mb-4">Navigacija</h3>
                         <div class="d-grid gap-3">
-                            <a href="{{ url_for('list_clients') }}" class="btn btn-primary btn-lg">
-                                📋 Klientai
+                            <a href="{{ url_for('expenses') }}" class="btn btn-primary btn-lg">
+                                💰 Mano Išlaidos
                             </a>
                             <a href="{{ url_for('saskaitos') }}" class="btn btn-success btn-lg">
                                 📄 Sąskaitos
