--- a/templates/expenses.html
+++ b/templates/expenses.html
@@ -55,6 +55,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/invoices">Sąskaitos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/clients">Klientai</a>
+                    </li>
                 </ul>
             </div>
         </div>
